# lexicom_test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/: entrypoint.py
src/api/v1/: __init__.py  client_data.py
src/cache/: redis_connection.py  redis_repository.py
src/core/: config.py
src/http_status_description/: description.py
src/models/: client_data.py
tests/functional/: .env.example  config.py  conftest.py  docker-compose.yml
tests/functional/src/: test_client_data.py
