[tool.poetry]
name = "client-data-service"
version = "0.1.0"
description = ""
authors = ["lysenkigor <lysenkigor14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
redis = "^5.0.4"
pydantic-settings = "^2.2.1"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
